--- a/portoflio-project/src/index.html
+++ b/portoflio-project/src/index.html
@@ -5,9 +5,9 @@
   <title>PortoflioProject</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icon.png">
 </head>
-<body>
+<body style="background-color: #282c34;font-family: Arial, Helvetica, sans-serif;">
   <app-root></app-root>
 </body>
 </html>
